fixes aws-cred mixmatch between copied slaveapi and new nightlypromotion templates

--- a/modules/slaveapi/templates/aws-secrets.json.erb
+++ b/modules/slaveapi/templates/aws-secrets.json.erb
@@ -1,4 +1,4 @@
 {
-    "aws_id": "<%= scope.function_secret(["nightly_promotion_aws_id"]) %>",
-    "aws_key": "<%= scope.function_secret(["nightly_promotion_aws_key"]) %>"
+    "deploy_username": "<%= scope.function_secret(["deploy_username"]) %>",
+    "deploy_password": "<%= scope.function_secret(["deploy_password"]) %>"
 }
